--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,21 +16,23 @@ a:hover, a:active{outline: 0;}
 
 //main styles:
 html, body {
+	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 html {
-	overflow-x: hidden;
 }
 
 body {
 	background-color: #EFEFEF;
-	width: 100%;
 	font-size: 100%;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 }
 
 .section {
+	height: 100%;
 	width: 100%;
 	min-height: 100%;
 	a{
@@ -117,7 +119,9 @@ a.link:hover, .logo:hover{
 	right: 0px;
 	top: 0px;
 	height: 48px;
+	height: 3rem;
 	margin-right: 32px;
+	margin-right: 2rem;
 	z-index: 3;
 }
 .player {
@@ -273,12 +277,12 @@ a.link:hover, .logo:hover{
 		background-size: cover;
 		color: #FFFFFF;
 		width: 100%;
-		height: 100%;
 		line-height: 1.5;
+		overflow-y: scroll;
+		overflow-x: hidden;
 	}
 	.aboutlandingwrapper{
 		min-height: 100%;
-		width: 100%;
 		img{
 			display: block;
 			width: 96%;
@@ -359,8 +363,9 @@ a.link:hover, .logo:hover{
 		}
 	}
 	.harrybio, .jakebio{
-		height: 66%;
 		margin: 0 auto;
+		width: 100%;
+		max-width: 900px;
 		h1{
 			color: $maincolor;
 			font-size: 32px;
@@ -384,20 +389,27 @@ a.link:hover, .logo:hover{
 			font-weight: 400;
 		}
 	}
-	.harrybiotext, .harryillustration{
+	.harryillustration, .harrybiotext{
 		float: left;
 	}
-	.jakebiotext, .jakeillustration{
+	.jakeillustration, .jakebiotext{
 		float: right;
 	}
 	.harrybiotext, .jakebiotext{
-		padding: 0px 16px;
-		padding: 0px 1em;
-		padding: 0px 1rem;
 		width: 20em;
+		background-color: #333333;
+		padding: 16px 3200px;
+		padding: 1rem 200rem;
+		margin: 0px 3184px;
+		margin: 0px -199rem;
+		z-index: 1;
 	}
 	.harryillustration, .jakeillustration{
-		height: 100%;
+		margin-top: 16px;
+		margin-top: 1rem;
+		width: 33%;
+		z-index: 3;
+		position: relative;
 	}
 
 	/* ============================================
