--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,10 @@ body {
   border-bottom: 4px solid #ff7729;
   z-index: 2;
   color: #000000;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s; }
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
+  transition: 0.8s; }
 
 .navonpageload {
   -webkit-transform: translateY(-4em);
@@ -267,13 +267,11 @@ a.link:hover, .logo:hover {
   left: 0;
   z-index: 1; }
 
-#home {
-  background-color: #efefef; }
-
 /* ============================================
    About
    ============================================ */
 #about {
+  background-color: #333333;
   background: url("../img/citybg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -292,7 +290,12 @@ a.link:hover, .logo:hover {
     width: 96%;
     padding: 15% 2% 0px 2%;
     max-width: 900px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    -webkit-transition: 0.8s ease-in-out;
+    -moz-transition: 0.8s ease-in-out;
+    -o-transition: 0.8s ease-in-out;
+    -ms-transition: 0.8s ease-in-out;
+    transition: 0.8s ease-in-out; }
   .aboutlandingwrapper p {
     max-width: 900px;
     margin: auto;
@@ -308,12 +311,11 @@ a.link:hover, .logo:hover {
     -webkit-column-gap: 2%;
     -moz-column-gap: 2%;
     column-gap: 2%;
-    opacity: 1;
-    -webkit-transition: 0.8s;
-    -moz-transition: 0.8s;
-    -o-transition: 0.8s;
-    -ms-transition: 0.8s;
-    transition: 0.8s; }
+    -webkit-transition: 0.8s ease-in-out;
+    -moz-transition: 0.8s ease-in-out;
+    -o-transition: 0.8s ease-in-out;
+    -ms-transition: 0.8s ease-in-out;
+    transition: 0.8s ease-in-out; }
   .aboutlandingwrapper h3 {
     font-size: 24px;
     font-size: 1.5em;
@@ -323,14 +325,12 @@ a.link:hover, .logo:hover {
     max-width: 900px;
     margin: auto;
     padding-top: 8px;
-    padding-top: 0.5rem; }
-  .aboutlandingwrapper .openingtransition {
-    opacity: 0;
-    -webkit-transform: translateY(128px);
-    -moz-transform: translateY(128px);
-    -o-transform: translateY(128px);
-    -ms-transform: translateY(128px);
-    transform: translateY(128px); }
+    padding-top: 0.5rem;
+    -webkit-transition: 0.8s ease-in;
+    -moz-transition: 0.8s ease-in;
+    -o-transition: 0.8s ease-in;
+    -ms-transition: 0.8s ease-in;
+    transition: 0.8s ease-in; }
   .aboutlandingwrapper .lines span {
     position: relative; }
   .aboutlandingwrapper .lines span:before, .aboutlandingwrapper .lines span:after {
@@ -355,6 +355,30 @@ a.link:hover, .logo:hover {
     left: 100%;
     margin-left: 8px;
     margin-left: 0.5rem; }
+
+.openingtransitiontitle {
+  opacity: 0;
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: rotateX(90deg);
+  -o-transform: rotateX(90deg);
+  -ms-transform: rotateX(90deg);
+  transform: rotateX(90deg); }
+
+.openingtransitionsubtitle {
+  opacity: 0;
+  -webkit-transform: rotateX(-90deg);
+  -moz-transform: rotateX(-90deg);
+  -o-transform: rotateX(-90deg);
+  -ms-transform: rotateX(-90deg);
+  transform: rotateX(-90deg); }
+
+.openingtransitionparagraph {
+  opacity: 0;
+  -webkit-transform: translateY(128px);
+  -moz-transform: translateY(128px);
+  -o-transform: translateY(128px);
+  -ms-transform: translateY(128px);
+  transform: translateY(128px); }
 
 .harrybio, .jakebio {
   margin: 0 auto;
@@ -410,6 +434,60 @@ a.link:hover, .logo:hover {
 /* ============================================
    Events
    ============================================ */
+#events {
+  background-color: #333333;
+  background: url("../img/citybg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #FFFFFF;
+  width: 100%;
+  line-height: 1.5;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+  #events hr {
+    width: 100%;
+    max-width: 900px;
+    border: 1px solid white; }
+  #events h1 {
+    color: #ff7729;
+    font-size: 32px;
+    font-size: 2em;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 96px 0px 0px 2%;
+    padding: 6rem 0px 0px 2%;
+    width: 100%;
+    max-width: 900px;
+    margin: auto; }
+  #events p {
+    color: #FFFFFF;
+    font-size: 14px;
+    font-size: 0.875em;
+    font-size: 0.875rem;
+    font-weight: 400;
+    width: 100%;
+    max-width: 900px;
+    margin: auto; }
+  #events hr, #events h1, #events p {
+    -webkit-transition: 0.8s ease-in-out;
+    -moz-transition: 0.8s ease-in-out;
+    -o-transition: 0.8s ease-in-out;
+    -ms-transition: 0.8s ease-in-out;
+    transition: 0.8s ease-in-out; }
+
+.leftcolumn {
+  float: left;
+  padding-left: 2%; }
+
+.rightcolumn {
+  float: right;
+  padding-right: 2%; }
+
+.inactivelink {
+  color: #999999; }
+
 /* ============================================
    Gallery
    ============================================ */
@@ -436,6 +514,12 @@ a.link:hover, .logo:hover {
       float: left;
       width: 33%;
       margin-left: 0.333%; }
+    #gallery .columns .left, #gallery .columns .center, #gallery .columns .right {
+      -webkit-transition: 0.8s ease-in-out;
+      -moz-transition: 0.8s ease-in-out;
+      -o-transition: 0.8s ease-in-out;
+      -ms-transition: 0.8s ease-in-out;
+      transition: 0.8s ease-in-out; }
 
 /* ============================================
    Misc
