--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,10 +54,10 @@ body {
 	border-bottom: 4px solid $maincolor;
 	z-index: 2;
 	color: #000000;
-	-webkit-transition: 0.4s;
-	-moz-transition: 0.4s;
-	-o-transition: 0.4s;
-	transition: 0.4s;
+	-webkit-transition: 0.8s;
+	-moz-transition: 0.8s;
+	-o-transition: 0.8s;
+	transition: 0.8s;
 }
 
 .navonpageload{
@@ -261,15 +261,12 @@ a.link:hover, .logo:hover{
 	z-index: 1;
 }
 
-#home {
-	background-color: $bgcolor;
-}
-
 	/* ============================================
 	   About
 	   ============================================ */
 
 	#about {
+		background-color: #333333;
 		background: url("../img/citybg.jpg") no-repeat center center fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
@@ -289,6 +286,11 @@ a.link:hover, .logo:hover{
 			padding: 15% 2% 0px 2%;
 			max-width: 900px;
 			margin: 0 auto;
+			-webkit-transition: 0.8s ease-in-out;
+			-moz-transition: 0.8s ease-in-out;
+			-o-transition: 0.8s ease-in-out;
+			-ms-transition: 0.8s ease-in-out;
+			transition: 0.8s ease-in-out;
 		}
 		p{
 			max-width: 900px;
@@ -305,12 +307,11 @@ a.link:hover, .logo:hover{
 			-webkit-column-gap: 2%;
 			-moz-column-gap: 2%;
 			column-gap: 2%;
-			opacity: 1;
-			-webkit-transition: 0.8s;
-			-moz-transition: 0.8s;
-			-o-transition: 0.8s;
-			-ms-transition: 0.8s;
-			transition: 0.8s;
+			-webkit-transition: 0.8s ease-in-out;
+			-moz-transition: 0.8s ease-in-out;
+			-o-transition: 0.8s ease-in-out;
+			-ms-transition: 0.8s ease-in-out;
+			transition: 0.8s ease-in-out;
 		}
 		h3 {
 			font-size: 24px;
@@ -322,14 +323,11 @@ a.link:hover, .logo:hover{
 		    margin: auto;
 		    padding-top: 8px;
 		    padding-top: 0.5rem;
-		}
-		.openingtransition{
-			opacity: 0;
-			-webkit-transform: translateY(128px);
-			-moz-transform: translateY(128px);
-			-o-transform: translateY(128px);
-			-ms-transform: translateY(128px);
-			transform: translateY(128px);
+		    -webkit-transition: 0.8s ease-in;
+			-moz-transition: 0.8s ease-in;
+			-o-transition: 0.8s ease-in;
+			-ms-transition: 0.8s ease-in;
+			transition: 0.8s ease-in;
 		}
 		//for vertical lines beside h3
 		.lines span{
@@ -361,6 +359,30 @@ a.link:hover, .logo:hover{
 			margin-left: 8px;
 			margin-left: 0.5rem;
 		}
+	}
+	.openingtransitiontitle{
+		opacity: 0;
+		-webkit-transform: rotateX(90deg);
+		-moz-transform: rotateX(90deg);
+		-o-transform: rotateX(90deg);
+		-ms-transform: rotateX(90deg);
+		transform: rotateX(90deg);
+	}
+	.openingtransitionsubtitle{
+		opacity: 0;
+		-webkit-transform: rotateX(-90deg);
+		-moz-transform: rotateX(-90deg);
+		-o-transform: rotateX(-90deg);
+		-ms-transform: rotateX(-90deg);
+		transform: rotateX(-90deg);
+	}
+	.openingtransitionparagraph{
+		opacity: 0;
+		-webkit-transform: translateY(128px);
+		-moz-transform: translateY(128px);
+		-o-transform: translateY(128px);
+		-ms-transform: translateY(128px);
+		transform: translateY(128px);
 	}
 	.harrybio, .jakebio{
 		margin: 0 auto;
@@ -422,6 +444,63 @@ a.link:hover, .logo:hover{
 	   ============================================ */
 	
 	#events {
+		background-color: #333333;
+		background: url("../img/citybg.jpg") no-repeat center center fixed;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+		color: #FFFFFF;
+		width: 100%;
+		line-height: 1.5;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		hr{
+			width: 100%;
+			max-width: 900px;
+			border: 1px solid #FFFFFF;
+		}
+		h1{
+			color: $maincolor;
+			font-size: 32px;
+			font-size: 2em;
+			font-size: 2rem;
+			font-weight: 700;
+			padding: 96px 0px 0px 2%;
+			padding: 6rem 0px 0px 2%;
+			width: 100%;
+			max-width: 900px;
+			margin: auto;
+			
+		}
+		p{
+			color: #FFFFFF;
+			font-size: 14px;
+			font-size: 0.875em;
+			font-size: 0.875rem;
+			font-weight: 400;
+			width: 100%;
+			max-width: 900px;
+			margin: auto;
+		}
+		hr, h1, p{
+			-webkit-transition: 0.8s ease-in-out;
+			-moz-transition: 0.8s ease-in-out;
+			-o-transition: 0.8s ease-in-out;
+			-ms-transition: 0.8s ease-in-out;
+			transition: 0.8s ease-in-out;
+		}
+	}
+	.leftcolumn{
+		float: left;
+		padding-left: 2%;
+	}
+	.rightcolumn{
+		float: right;
+		padding-right: 2%;
+	}
+	.inactivelink{
+		color: #999999;
 	}
 
 	/* ============================================
@@ -454,6 +533,13 @@ a.link:hover, .logo:hover{
 				float: left;
 				width: 33%;
 				margin-left: 0.333%;
+			}
+			.left, .center, .right{
+				-webkit-transition: 0.8s ease-in-out;
+				-moz-transition: 0.8s ease-in-out;
+				-o-transition: 0.8s ease-in-out;
+				-ms-transition: 0.8s ease-in-out;
+				transition: 0.8s ease-in-out;
 			}
 		}
 	}
