--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,13 @@
 //variables
 $maincolor: #FF7729;
 $bgcolor: #EFEFEF;
+$mainbreak: 56.25em;//900px
+$mobilebreakpoint: 40em;//640px
 
 //resets
 html,body,div,span,applet,object,iframe, h1,h2,h3,h4,h5,h6,p,blockquote,pre, a,abbr,acronym,address,big,cite,code, del,dfn,em,img,ins,kbd,q,s,samp, small,strike,strong,sub,sup,tt,var, b,u,i,center, dl,dt,dd,ol,ul,li, fieldset,form,label,legend, table,caption,tbody,tfoot,thead,tr,th,td, article,aside,canvas,details,embed,figcaption,figure, footer,header,hgroup,menu,nav,output,ruby,section,summary, time,mark,audio,video{margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;} article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display: block;} body{line-height: 1;} ol,ul{list-style: none;} blockquote,q{quotes: none;} blockquote:before,blockquote:after,q:before,q:after{content: ""; content: none;} table{border-collapse: collapse; border-spacing: 0;} 
 
 a{color: #000;}
-a:visited{color: #000;}
 a:hover{color: #000;}
 a:focus{outline: thin dotted;}
 a:hover, a:active{outline: 0;}
@@ -15,32 +16,21 @@ a:hover, a:active{outline: 0;}
 ::selection{background: $maincolor; color: #fff; text-shadow: none;}
 
 //main styles:
-html, body {
+html{
+	font-size: 100%;
 	height: 100%;
+}
+html, body {
 	width: 100%;
+	height: 100%;
 	overflow-x: hidden;
 }
 
-html {
-}
-
 body {
-	background-color: #EFEFEF;
-	font-size: 100%;
+	background-color: $bgcolor;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 }
-
-.section {
-	height: 100%;
-	width: 100%;
-	min-height: 100%;
-	a{
-		color: $maincolor;
-		text-decoration: none;
-	}
-}
-
 /* ============================================
    Nav
    ============================================ */
@@ -52,7 +42,7 @@ body {
 	background-color: #FFFFFF;
 	position: fixed;
 	border-bottom: 4px solid $maincolor;
-	z-index: 2;
+	z-index: 99;
 	color: #000000;
 	-webkit-transition: 0.8s;
 	-moz-transition: 0.8s;
@@ -77,17 +67,33 @@ body {
 	-moz-background-size: 46px;
 	-o-background-size: 46px;
 	background-size: 46px;
+	@media screen and (max-width: $mobilebreakpoint){
+		display: none;
+	}
 }
 
-.nav a.link {
+.nav a.link, .nav a.externallink {
 	float: left;
 	text-decoration: none;
 	font-size: 0.9em;
-	padding: 1.75em 1.3em 1.75em 1.3em;
+	padding: 0px 2%;
+	line-height: 64px;
+	line-height: 4rem;
 	-webkit-transition: 0.4s;
 	-moz-transition: 0.4s;
 	-o-transition: 0.4s;
 	transition: 0.4s;
+	@media screen and (max-width: $mobilebreakpoint){
+		width: 25%;
+		text-align: center;
+		padding: 0px;
+	}
+}
+
+.hidelinkonmobile{
+	@media screen and (max-width: $mobilebreakpoint){
+		display: none;
+	}
 }
 
 .nav .activepage{
@@ -106,7 +112,7 @@ body {
 	float: left;
 }
 
-a.link:hover, .logo:hover{
+a.link:hover, .logo:hover, a.externallink:hover{
 	background-color: #EFEFEF;
 }
 
@@ -123,6 +129,9 @@ a.link:hover, .logo:hover{
 	margin-right: 32px;
 	margin-right: 2rem;
 	z-index: 3;
+	@media screen and (max-width: $mobilebreakpoint){
+		display: none;
+	}
 }
 .player {
 	background: url("../img/controls-sprite.png") no-repeat;
@@ -179,10 +188,11 @@ a.link:hover, .logo:hover{
 	display: none;
 	float: left;
 	background-color: #FFFFFF;
-	border-bottom: #EFEFEF 1px solid;
+	border-bottom: 4px solid #FF7729;
 	width: 256px;
 	height: 64px; 
 	z-index: 2;
+	margin-bottom: -4px;//so keyline border at bottom is overlapped by list
 	h1{
 		margin-top: 8px;
 		line-height: 24px;
@@ -220,7 +230,7 @@ a.link:hover, .logo:hover{
 	float: left;
 	width: 256px;
 	border-bottom: 4px solid #FF7729;
-	z-index: 2;
+	z-index: 3;
 }
 .tracktext{
 	color: #000000;
@@ -251,20 +261,25 @@ a.link:hover, .logo:hover{
 
 #about, #events, #gallery {
 	display: none;
+	color: #FFFFFF;
+	width: 100%;
+	line-height: 1.5;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
-.stage {
+section {
 	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	z-index: 1;
+	a{
+		color: $maincolor;
+		text-decoration: none;
+		cursor: pointer;
+	}
 }
 
 	/* ============================================
 	   About
 	   ============================================ */
-
 	#about {
 		background-color: #333333;
 		background: url("../img/citybg.jpg") no-repeat center center fixed;
@@ -272,11 +287,7 @@ a.link:hover, .logo:hover{
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
-		color: #FFFFFF;
-		width: 100%;
-		line-height: 1.5;
-		overflow-y: scroll;
-		overflow-x: hidden;
+		height: 100%;//problematic for stock android scrolling, fix if possible
 	}
 	.aboutlandingwrapper{
 		min-height: 100%;
@@ -291,6 +302,10 @@ a.link:hover, .logo:hover{
 			-o-transition: 0.8s ease-in-out;
 			-ms-transition: 0.8s ease-in-out;
 			transition: 0.8s ease-in-out;
+			@media screen and (max-width: $mainbreak){
+				padding: 96px 2% 0px 2%;
+				padding: 6rem 2% 0px 2%;
+			}
 		}
 		p{
 			max-width: 900px;
@@ -312,6 +327,13 @@ a.link:hover, .logo:hover{
 			-o-transition: 0.8s ease-in-out;
 			-ms-transition: 0.8s ease-in-out;
 			transition: 0.8s ease-in-out;
+			@media screen and (max-width: $mainbreak){
+				-webkit-column-count: 1;
+				-moz-column-count: 1;
+				column-count: 1;
+				padding: 16px;
+				padding: 1rem;
+			}
 		}
 		h3 {
 			font-size: 24px;
@@ -362,14 +384,27 @@ a.link:hover, .logo:hover{
 	}
 	.openingtransitiontitle{
 		opacity: 0;
+		//hardware acceleration
+		-webkit-transform: translate3d(0, 0, 0);
+		-moz-transform: translate3d(0, 0, 0);
+		-ms-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+		//main transforms
 		-webkit-transform: rotateX(90deg);
 		-moz-transform: rotateX(90deg);
 		-o-transform: rotateX(90deg);
 		-ms-transform: rotateX(90deg);
 		transform: rotateX(90deg);
+
 	}
 	.openingtransitionsubtitle{
 		opacity: 0;
+		//hardware acceleration
+		-webkit-transform: translate3d(0, 0, 0);
+		-moz-transform: translate3d(0, 0, 0);
+		-ms-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+		//main transforms
 		-webkit-transform: rotateX(-90deg);
 		-moz-transform: rotateX(-90deg);
 		-o-transform: rotateX(-90deg);
@@ -378,11 +413,17 @@ a.link:hover, .logo:hover{
 	}
 	.openingtransitionparagraph{
 		opacity: 0;
-		-webkit-transform: translateY(128px);
-		-moz-transform: translateY(128px);
-		-o-transform: translateY(128px);
-		-ms-transform: translateY(128px);
-		transform: translateY(128px);
+		//hardware acceleration
+		-webkit-transform: translate3d(0, 0, 0);
+		-moz-transform: translate3d(0, 0, 0);
+		-ms-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+		//main transforms
+		-webkit-transform: translateY(256px);
+		-moz-transform: translateY(256px);
+		-o-transform: translateY(256px);
+		-ms-transform: translateY(256px);
+		transform: translateY(256px);
 	}
 	.harrybio, .jakebio{
 		margin: 0 auto;
@@ -427,16 +468,33 @@ a.link:hover, .logo:hover{
 		margin: 0px -199rem;
 		z-index: 1;
 	}
-	.jakebiotext{
-		margin-bottom: 64px;
-		margin-bottom: 4rem;
-	}
 	.harryillustration, .jakeillustration{
 		margin-top: 16px;
 		margin-top: 1rem;
 		width: 35%;
 		z-index: 3;
 		position: relative;
+	}
+	.jakebiotext{
+		margin-bottom: 128px;
+		margin-bottom: 8rem;
+	}
+	.aboutfooter{
+		float: right;
+		width: 100%;
+		height: 64px;
+		height: 4rem;
+		font-size: 12px;
+		font-size: 0.75rem;
+		background-color: #222222;
+		color: #444444;
+		text-align: center;
+		line-height: 64px;
+		line-height: 4rem; 
+		z-index: 5;
+		a{
+			color: #444444
+		}
 	}
 
 	/* ============================================
@@ -450,11 +508,8 @@ a.link:hover, .logo:hover{
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
-		color: #FFFFFF;
-		width: 100%;
-		line-height: 1.5;
-		overflow-y: scroll;
 		overflow-x: hidden;
+		min-height: 100%;
 		hr{
 			width: 100%;
 			max-width: 900px;
@@ -471,7 +526,6 @@ a.link:hover, .logo:hover{
 			width: 100%;
 			max-width: 900px;
 			margin: auto;
-			
 		}
 		p{
 			color: #FFFFFF;
@@ -508,13 +562,10 @@ a.link:hover, .logo:hover{
 	   ============================================ */
 	
 	#gallery {
-		width: 100%;
 		min-height: 100%;
-		background-color: $bgcolor;
 		margin-top: 64px;
 		margin-top: 4em;
 		.columns {
-			min-height: 33.333%;
 			img {
 				width: 100%;
 				margin-bottom: 0.333%;
@@ -540,27 +591,15 @@ a.link:hover, .logo:hover{
 				-o-transition: 0.8s ease-in-out;
 				-ms-transition: 0.8s ease-in-out;
 				transition: 0.8s ease-in-out;
+				@media screen and (max-width: $mobilebreakpoint){
+					-moz-transition: none;
+					-webkit-transition: none;
+					-o-transition: color 0 ease-in;
+					-ms-transition: none;
+					transition: none;
+					width: 100%;
+					margin: 0px;
+				}
 			}
 		}
 	}
-
-/* ============================================
-   Misc
-   ============================================ */
-
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0; }
-
-.clearfix {
-  display: inline-block; }
-
-html[xmlns] .clearfix {
-  display: block; }
-
-* html .clearfix {
-  height: 1%; }
