--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,10 +44,10 @@ body {
 	border-bottom: 4px solid $maincolor;
 	z-index: 99;
 	color: #000000;
-	-webkit-transition: 0.8s;
-	-moz-transition: 0.8s;
-	-o-transition: 0.8s;
-	transition: 0.8s;
+	-webkit-transition: -webkit-transform 0.8s;
+	-moz-transition: -moz-transform 0.8s;
+	-o-transition: -o-transform 0.8s;
+	transition: transform 0.8s;
 }
 
 .navonpageload{
@@ -537,7 +537,7 @@ section {
 			max-width: 900px;
 			margin: auto;
 		}
-		hr, h1, p{
+		hr, h1, ul{
 			-webkit-transition: 0.8s ease-in-out;
 			-moz-transition: 0.8s ease-in-out;
 			-o-transition: 0.8s ease-in-out;
@@ -565,41 +565,69 @@ section {
 		min-height: 100%;
 		margin-top: 64px;
 		margin-top: 4em;
-		.columns {
-			img {
+	}
+	.imagecontainer{
+		position: relative;
+		margin-bottom: 0.333%;
+		p{
+			position: absolute;
+		    left: 0px;
+		    bottom: 0px;
+		    background: url("../img/gallerytextbg.png") repeat-x;
+			font-size: 16px;
+			font-size: 1em;
+			font-size: 1rem;
+			line-height: 48px;
+			line-height: 3rem;
+			font-weight: 400;
+			text-align: center;
+			height: 48px;
+		    width: 100%;
+		    opacity: 0;
+		    -webkit-transition: 0.4s ease-in-out;
+			-moz-transition: 0.4s ease-in-out;
+			-o-transition: 0.4s ease-in-out;
+			-ms-transition: 0.4s ease-in-out;
+			transition: 0.4s ease-in-out;
+			z-index: 3;
+		}
+		&:hover p{
+			opacity: 1;
+		}
+	}
+	.columns {
+		img {
+			width: 100%;
+			z-index: 2;
+		}
+		.left {
+			float: left;
+			width: 33%;
+			margin-right: 0.333%;
+		}
+		.center {
+			float: left;
+			width: 33.333%;
+		}
+		.right {
+			float: left;
+			width: 33%;
+			margin-left: 0.333%;
+		}
+		.left, .center, .right{
+			-webkit-transition: 0.8s ease-in-out;
+			-moz-transition: 0.8s ease-in-out;
+			-o-transition: 0.8s ease-in-out;
+			-ms-transition: 0.8s ease-in-out;
+			transition: 0.8s ease-in-out;
+			@media screen and (max-width: $mobilebreakpoint){
+				-moz-transition: none;
+				-webkit-transition: none;
+				-o-transition: color 0 ease-in;
+				-ms-transition: none;
+				transition: none;
 				width: 100%;
-				margin-bottom: 0.333%;
-				margin-bottom: 0.333vw;
-			}
-			.left {
-				float: left;
-				width: 33%;
-				margin-right: 0.333%;
-			}
-			.center {
-				float: left;
-				width: 33.333%;
-			}
-			.right {
-				float: left;
-				width: 33%;
-				margin-left: 0.333%;
-			}
-			.left, .center, .right{
-				-webkit-transition: 0.8s ease-in-out;
-				-moz-transition: 0.8s ease-in-out;
-				-o-transition: 0.8s ease-in-out;
-				-ms-transition: 0.8s ease-in-out;
-				transition: 0.8s ease-in-out;
-				@media screen and (max-width: $mobilebreakpoint){
-					-moz-transition: none;
-					-webkit-transition: none;
-					-o-transition: color 0 ease-in;
-					-ms-transition: none;
-					transition: none;
-					width: 100%;
-					margin: 0px;
-				}
+				margin: 0px;
 			}
 		}
 	}
