--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,6 @@ $mobilebreakpoint: 40em;//640px
 html,body,div,span,applet,object,iframe, h1,h2,h3,h4,h5,h6,p,blockquote,pre, a,abbr,acronym,address,big,cite,code, del,dfn,em,img,ins,kbd,q,s,samp, small,strike,strong,sub,sup,tt,var, b,u,i,center, dl,dt,dd,ol,ul,li, fieldset,form,label,legend, table,caption,tbody,tfoot,thead,tr,th,td, article,aside,canvas,details,embed,figcaption,figure, footer,header,hgroup,menu,nav,output,ruby,section,summary, time,mark,audio,video{margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;} article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display: block;} body{line-height: 1;} ol,ul{list-style: none;} blockquote,q{quotes: none;} blockquote:before,blockquote:after,q:before,q:after{content: ""; content: none;} table{border-collapse: collapse; border-spacing: 0;} 
 
 a{color: #000;}
-a:hover{color: #000;}
 a:focus{outline: thin dotted;}
 a:hover, a:active{outline: 0;}
 
@@ -188,7 +187,7 @@ a.link:hover, .logo:hover, a.externallink:hover{
 	display: none;
 	float: left;
 	background-color: #FFFFFF;
-	border-bottom: 4px solid #FF7729;
+	border-bottom: 4px solid $maincolor;
 	width: 256px;
 	height: 64px; 
 	z-index: 2;
@@ -215,7 +214,7 @@ a.link:hover, .logo:hover, a.externallink:hover{
 		text-indent: 12px;
 		text-indent: 0.75em;
 		text-indent: 0.75rem;
-		color: #FF7729;
+		color: $maincolor;
 	}
 }
 .albumart{
@@ -223,13 +222,13 @@ a.link:hover, .logo:hover, a.externallink:hover{
 	height: 64px;
 	width: 64px;
 	background-size: 64px;
-	background-color: #FF7729;
+	background-color: $maincolor;
 }
 .tracklist{
 	display: none;
 	float: left;
 	width: 256px;
-	border-bottom: 4px solid #FF7729;
+	border-bottom: 4px solid $maincolor;
 	z-index: 3;
 }
 .tracktext{
@@ -251,7 +250,7 @@ a.link:hover, .logo:hover, a.externallink:hover{
 }
 
 .trackplaying{
-	border-left: 8px solid #FF7729;
+	border-left: 8px solid $maincolor;
 	text-indent: 16px;
 }
 
@@ -261,19 +260,28 @@ a.link:hover, .logo:hover, a.externallink:hover{
 
 #about, #events, #gallery {
 	display: none;
+}
+
+section {
+	width: 100%;
 	color: #FFFFFF;
 	width: 100%;
 	line-height: 1.5;
 	overflow-x: hidden;
 	overflow-y: auto;
-}
-
-section {
-	width: 100%;
 	a{
 		color: $maincolor;
 		text-decoration: none;
 		cursor: pointer;
+		-webkit-transition: 0.4s;
+		-moz-transition: 0.4s;
+		-o-transition: 0.4s;
+		-ms-transition: 0.4s;
+		transition: 0.4s;
+		&:hover{
+			color: $maincolor;
+			border-bottom: 1px solid $maincolor;
+		}
 	}
 }
 
@@ -287,11 +295,12 @@ section {
 		-moz-background-size: cover;
 		-o-background-size: cover;
 		background-size: cover;
-		height: 100%;//problematic for stock android scrolling, fix if possible
+		height: 100%;//problematic for stock android scrolling(only), fix if possible
+		overflow-x: hidden;
 	}
 	.aboutlandingwrapper{
 		min-height: 100%;
-		img{
+		.wordmark{
 			display: block;
 			width: 96%;
 			padding: 15% 2% 0px 2%;
@@ -310,8 +319,8 @@ section {
 		p{
 			max-width: 900px;
 			margin: auto;
-			padding: 64px;
-			padding: 4rem;
+			padding: 32px 64px;
+			padding: 2rem 4rem;
 			font-size: 14px;
 			font-size: 0.875em;
 			font-size: 0.875rem;
@@ -319,9 +328,9 @@ section {
 			-webkit-column-count: 2;
 			-moz-column-count: 2;
 			column-count: 2;
-			-webkit-column-gap: 2%;
-			-moz-column-gap: 2%;
-			column-gap: 2%;
+			-webkit-column-gap: 16px;
+			-moz-column-gap: 16px;
+			column-gap: 16px;
 			-webkit-transition: 0.8s ease-in-out;
 			-moz-transition: 0.8s ease-in-out;
 			-o-transition: 0.8s ease-in-out;
@@ -425,6 +434,35 @@ section {
 		-ms-transform: translateY(256px);
 		transform: translateY(256px);
 	}
+	.scrolldownbutton{
+		-webkit-transition: 0.8s ease-in-out;
+		-moz-transition: 0.8s ease-in-out;
+		-o-transition: 0.8s ease-in-out;
+		-ms-transition: 0.8s ease-in-out;
+		transition: 0.8s ease-in-out;
+		display: block;
+		max-width: 900px;
+		margin: auto;
+		height: 64px;
+		width: 64px;
+		cursor: pointer;
+		&:hover{
+			//hardware acceleration
+			-webkit-transform: translate3d(0, 0, 0);
+			-moz-transform: translate3d(0, 0, 0);
+			-ms-transform: translate3d(0, 0, 0);
+			transform: translate3d(0, 0, 0);
+			//main transforms
+			-webkit-transform: translateY(16px);
+			-moz-transform: translateY(16px);
+			-o-transform: translateY(16px);
+			-ms-transform: translateY(16px);
+			transform: translateY(16px);
+		}
+		@media screen and (max-width: $mobilebreakpoint){
+			display: none;
+		}
+	}
 	.harrybio, .jakebio{
 		margin: 0 auto;
 		width: 100%;
@@ -443,6 +481,7 @@ section {
 			font-size: 0.875rem;
 			font-weight: 400;
 			font-style: italic;
+			line-height: 2;
 		}
 		p{
 			color: #FFFFFF;
@@ -460,7 +499,9 @@ section {
 	}
 	.harrybiotext, .jakebiotext{
 		border-top: 4px solid $maincolor;
-		max-width: 20em;
+		max-width: 352px;
+		max-width: 22em;
+		max-width: 22rem;
 		background-color: #333333;
 		padding: 16px 3200px;
 		padding: 1rem 200rem;
@@ -469,9 +510,9 @@ section {
 		z-index: 1;
 	}
 	.harryillustration, .jakeillustration{
-		margin-top: 16px;
-		margin-top: 1rem;
-		width: 35%;
+		margin-top: 32px;
+		margin-top: 2rem;
+		width: 37%;
 		z-index: 3;
 		position: relative;
 	}
@@ -547,11 +588,20 @@ section {
 	}
 	.leftcolumn{
 		float: left;
-		padding-left: 2%;
+		margin-left: 2%;
+		-webkit-transition: 0.4s;
+		-moz-transition: 0.4s;
+		-o-transition: 0.4s;
+		-ms-transition: 0.4s;
+		transition: 0.4s;
+		a{
+			color: #FFFFFF;
+		}
+		
 	}
 	.rightcolumn{
 		float: right;
-		padding-right: 2%;
+		margin-right: 2%;
 	}
 	.inactivelink{
 		color: #999999;
@@ -560,7 +610,7 @@ section {
 	/* ============================================
 	   Gallery
 	   ============================================ */
-	
+
 	#gallery {
 		min-height: 100%;
 		margin-top: 64px;
@@ -569,10 +619,11 @@ section {
 	.imagecontainer{
 		position: relative;
 		margin-bottom: 0.333%;
+		 background-size: 48px 100%;
 		p{
 			position: absolute;
 		    left: 0px;
-		    bottom: 0px;
+		    bottom: 4px;
 		    background: url("../img/gallerytextbg.png") repeat-x;
 			font-size: 16px;
 			font-size: 1em;
@@ -590,6 +641,7 @@ section {
 			-ms-transition: 0.4s ease-in-out;
 			transition: 0.4s ease-in-out;
 			z-index: 3;
+			border-bottom: 4px solid $maincolor;
 		}
 		&:hover p{
 			opacity: 1;
